src/ggrc/assets/stylesheets/_layout.scss
/*
 * Copyright (C) 2013 Google Inc., authors, and contributors <see AUTHORS file>
 * Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
 * Created By: brad@reciprocitylabs.com
 * Maintained By: brad@reciprocitylabs.com
 */

// container size
.container-fluid {
  margin:0 auto;
  &.resizable {
    @include transition(width 0.2s);
  }
}

// placeholder for widgets drag and drop
.drop-placeholder {
  background:$dropPlaceholder;
  border:1px dotted $gray;
  height:24px;
  line-height:24px;
  font-size: $f-regular;
  font-weight: bold;
  @include border-radius($default-border-radius);
  text-align: center;
  &:before {
    content:"Drop Here";
  }
  color: $darkGray;
}

.lhs-holder {
  position:fixed;
  top:30px;
  left:0;
  width:240px;
  height:500px;
  overflow-y:auto;
}
.area {
  margin-left:248px;
}
.header-content {
  height:50px;
  line-height:50px;
  position:fixed;
  top: 30px;
  width:100%;
}
/* Inner nav dont exist anymore. It is moved up to top-inner-nav
.inner-nav {
  width:200px;
  height:445px;
  position:fixed;
  top:80px;
  overflow-y:auto;
  overflow-x:hidden;
}
*/
.top-inner-nav {
  width: 100%;
  position: fixed;
  top: 80px;
  z-index: 1000;
  border-bottom: 1px solid $tabBorder;
}
.object-area {
  position:fixed;
  top: 130px;
  overflow-y:auto;
  overflow-x:hidden;
  margin-left:200px;
  height:445px;
  &.import-area {
    margin-left:0;
  }
  &.dashboard-area {
    margin-left:0;
  }

}

.footer {
  margin-top:500px;
  overflow:hidden;
}

